--- a/pages/p8/953915.md
+++ b/pages/p8/953915.md
@@ -1,4 +1,4 @@
-### 女人的幸福不在美貌 这3件事更重要(组图)
+### “淫欲”重的3种迹象(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,21 +6,14 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="女人 幸福 美貌 杨绛" src="https://img3.secretchina.com/pic/2020/7-24/p2739522a365070887-ss.jpg"/>
+ <p style="text-align: center;">
+  <img alt="淫欲 正信 正念 戒律" src="https://img3.secretchina.com/pic/2020/11-27/p2826722a992467719-ss.jpg"/>
   <br>
+   “
    <strong>
-    女人
+    淫欲
    </strong>
-   的
-   <strong>
-    幸福
-   </strong>
-   不在
-   <strong>
-    美貌
-   </strong>
-   ，在这3件事。（图片来源：Adobestock）
+   ”重的3种迹象。（图片来源：Adobestock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -32,70 +25,54 @@
 
 ---
 
-#### [ 🎬  《红墙的记忆》- 4.25中南海万人和平上访纪实](http://141.164.39.94:10000/videos/legend/425.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.39.94:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.39.94:10000/videos/blog/jiexi1400.html)
-
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/) &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html)
-
-#### 💥 [九评共产党](http://141.164.39.94:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.39.94:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.39.94:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.39.94:10000/videos/res/TheSpecter/)  
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
+  在这世上，只要心怀
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/杨绛" target="_blank">
-    杨绛
+   <span href="https://www.secretchina.com/news/gb/tag/正信" target="_blank">
+    正信
    </span>
+   、正念
   </strong>
-  身为国内知名的作家，不仅有极高的文学素养，也是女性的楷模。她在2016年以105岁高龄走完人生，虽然不在了，却给后人留下无数财富。
+  的人，相信都会认同“邪淫”是恶事当中最严重的一种，所以古人才会说“百善孝为先，万恶淫为首”。这在许多正法门修炼中，也是最重要的
+  <strong>
+   戒律
+  </strong>
+  之一。例如在佛家，不论是在家居士或是出家僧人，只要犯此戒，都是不可原谅的行为，触犯的人，将会受到很严重的报应。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  当然
-  <span href="https://www.google.com.tw/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwjK4NzbzeXqAhUmCqYKHWeLCi0QmhMwH3oECAUQAg&amp;url=https%3A%2F%2Fzh.wikipedia.org%2Fzh-tw%2F%25E6%259D%25A8%25E7%25BB%259B&amp;usg=AOvVaw16cxb2qBoOFx61bHonlfW9">
-   杨绛
-  </span>
-  的一生并不顺遂，她曾在短短两年先后失去丈夫和女儿，对她打击非常大。后来杨绛在《我们仨》也回忆起之前的家庭生活，让人十分触动。即使如此，杨绛也并未被挫折击败，虽然晚年病痛多，她依旧乐观生活，坚持创作。
+  佛经里也记载着：除淫即是净性身。
  </p>
  <p>
-  杨绛的健康长寿，或许也源于她的心态，因此杨绛留给人们的话语，里面都有极深的道理。例如杨绛就留给女性们三句话，从中告诫女性，一个
-  <span href="https://www.secretchina.com/news/gb/tag/女人" target="_blank">
-   女人
+  中国民间也流传一句广为人知的话—色字头上一把刀。而一个人“
+  <span href="https://www.secretchina.com/news/gb/tag/淫欲" target="_blank">
+   淫欲
   </span>
-  的幸福，从不是美貌，而是要从内心领悟3句话。
+  心”重不重，还是能从一些迹象里看出来的。究竟是哪些迹象呢？
  </p>
  <p>
   <strong>
-   1、如要锻炼一个能做大事的人，必定要叫他吃苦受累，百不称心，才能养成坚忍的性格。
+   1
+  </strong>
+  <strong>
+   、易怒
   </strong>
  </p>
  <p>
-  一个人经过不同程度的锻炼，就能获得不同程度的修养。好比香料，捣得愈碎，磨得愈细，香味就愈浓烈。很多人听到这句话或许会觉得非常熟悉，因为想做大事，性格是非常重要的，成功的人通常都有着坚韧的性格。
+  在佛家思想中，色目行淫，同名欲火。就是因为这么严重，所以许多有德行的人，就给淫欲这种事情起一个名目，这些个色的形相和名字，就叫“欲火”。
  </p>
  <p>
-  尤其是女性，就算到了今日，在社会中生活的条件普遍也没有男性好，无论是事业，还是生活，都需要有坚定的性格，否则很难承受挫折打击。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  杨绛与钱钟书这对神仙伴侣，也生活在动荡的年代，在出国留学之后，国内很快就爆发了抗日战争。
+  生活中也有所谓“欲火焚身”的说法，意思是一个人的淫欲心太重的话，就好像有一种火，要把自己烧了。而发火和生气，就容易触发一个人的“淫欲心”，所以淫欲重的人业力就大，也特别容易生气发火。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -110,7 +87,7 @@
   </div>
  </center>
  <p>
-  像杨绛与丈夫也受到战争影响，历经诸多波折，才又回到国内继续着文学创作。她把自己遭受的诸多打击，都转化为力量，这才让她的作品深入人心。
+  当一个人动不动就生气发火时，不仅容易伤害身边的人，做出折损福报的事，自己的身体健康也容易因此受到伤害。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -125,11 +102,7 @@
   </div>
  </center>
  <p>
-  可惜很多人在遭受打击后就一蹶不振，这样的人是很难找到
-  <span href="https://www.secretchina.com/news/gb/tag/幸福" target="_blank">
-   幸福
-  </span>
-  的。
+  所以一个修身养性、道德高尚的人，若发现自己有淫欲心，那么就会像看见火坑一样，想方设法躲避它。否则就像跳进火坑一样，对自己造成难以弥补的损害。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -145,103 +118,86 @@
  </center>
  <p>
   <strong>
-   2、上苍不会让所有幸福集中到某个人身上，得到爱情未必拥有金钱；拥有金钱未必得到快乐；得到快乐未必拥有健康；拥有健康未必一切都会如愿以偿。
+   2
   </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="text-align:center">
-  <img alt="上天是非常公平的，即便你会得到好运，也会失去一些东西。" src="https://img3.secretchina.com/pic/2020/5-6/p2684472a190593978-ss.jpg"/>
-  <br>
-   上天是非常公平的，即便你会得到好运，也会失去一些东西。（图片来源：Adobestock）
-  </br>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  这句话也提醒人们不要太贪婪，因为上天是非常公平的，即便你会得到好运，也会失去一些东西。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  而人们所追求的快乐，金钱等，很难全部都得到，只是很多人过于贪婪，不满足只得到一样，所以会执着追求其他的。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  但若物质精神层面要求太多，人活起来就会很累。很多人到头来才发现自己没办法得到所有的，可惜也晚了，因为之前得到的一些好东西都因为自己的贪欲而失去了。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  人们确实有追求好生活的欲望，但要有限度。如果太过在意得失，就会失去更多快乐，因为我们不可能独得所有好东西。除非是道德高洁的圣人，否则一般人多少还是有欲望，难以断绝对欲望的追求。这种时候就要更加理性，不要让欲望淹没了自己。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
   <strong>
-   3、我和谁都不争，和谁争我都不屑。简朴的生活、高贵的灵魂是人生的至高境界。
+   、纵欲
   </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  佛教经典中也提到：淫心不除，尘不可出，纵有多智禅定现前，终落魔道。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  由此可见“淫欲”对人所造成的恶果是非常严重的。当然人多多少少都会有自己的欲望，但要懂得节制，不能过度放纵。当一个人充满了贪欲，而且不知节制的话，就会陷入欲望的深渊无法自拔。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  例如时下许多人都喜欢炫富、追求名牌、一有高档手机上市就想拥有。但自己的薪水又无法支付的情况下，有些女性就会选择出卖自己，来换取这些表面的虚荣。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “万恶淫为首”，当人一旦脱离道德底线，就是在加速损耗自己原有的福报，自毁前程。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  所以放纵自己欲望的结果，常会使人走上不归路，也失去了自己本有的自由与美好的未来。欲望过多，就会一点一滴把人们善良的心灵吞噬殆尽，等人们醒悟时，通常为时已晚。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -260,7 +216,7 @@
   </ins>
  </center>
  <p>
-  杨绛夫妻名气很高，相对他们的作品也难免会面临更多竞争，但文坛这样竞争一直都没少过。人生在世，心胸要豁达，少一些争斗、攀比心，多追求简朴生活，这样的人生反而更有乐趣。
+  所以欲望多的人，一定要下决心戒除，这样自然也能远离“淫欲”，减少恶果，福报自来。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -275,7 +231,12 @@
   </div>
  </center>
  <p>
-  像杨绛就活得十分透彻，她在盛名之下，依旧生活简单朴素，不屑去和他人竞争，也不理会他人的挑战。正是这种心态，让杨绛长期保持高水准的创作力，可以把更多精力放在创作上。
+  <strong>
+   3
+  </strong>
+  <strong>
+   、轻视生命
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -290,7 +251,7 @@
   </div>
  </center>
  <p>
-  当然有人的地方就会有竞争，杨绛也只能提醒人们减少竞争意识，追求更朴素的生活。
+  有些人对生命非常不尊重，动辄就喜欢伤害其他生命，甚至杀害生命。每个生命都是很宝贵的，不知珍惜其他生命，那么只会给自己造下深深的罪业。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -305,7 +266,7 @@
   </div>
  </center>
  <p>
-  杨绛在百岁时曾感慨说道：“在物欲横流的时间行走，人生真是苦。”
+  以前的人对生命是非常尊重的，就算渔夫捕鱼，屠夫杀猪，也都是为了满足人们的生活所需，他们对于这些维持他们生活的生命也是非常尊重的。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -320,7 +281,7 @@
   </div>
  </center>
  <p>
-  是的，人生每经历一次挫折，就像摔了个跟头，有时候别人会拉你一把，但想站起来，永远要靠自己。而苦难也是对灵魂最好的修炼，一个没有经历苦难的人，是不可能获得高于他人的成就的！
+  但在现在道德观念越来越低下的社会中，许多人无故虐杀猫狗，甚至为了钱财，不惜谋害人。也有的虽然不会那样做，但为了满足自己的口腹之欲，却会命令别人那么做，这也都为自己种下了极大的恶业，终有一天会尝到恶果的。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -335,7 +296,7 @@
   </div>
  </center>
  <p>
-  身为一个女人，杨绛是成功的，无论是做妻子、朋友还是家人。因为她的一生不争不抢、人淡如菊，清新脱俗，却又勇于挑战生活，不抱怨，终能迎来属于自己的人生。
+  一个“淫欲心”重的人，通常会有以上3种特质。不知你是否也有自己的体会，欢迎在底下留言，与读者分享。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -349,7 +310,7 @@
    </center>
   </div>
  </center>
- <p style="margin-bottom:8px;">
+ <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
@@ -367,7 +328,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="https://img3.secretchina.com/pic/2020/7-21/p2736951a334373943.jpg" width="300px"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -399,13 +360,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/940633.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/940633.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/940633.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/07/23/940633.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/953915.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/953915.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/953915.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/27/953915.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p8/940633.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/953915.md' width='0px' height='0px'/>
