--- a/pages/nsc412/n12576905.md
+++ b/pages/nsc412/n12576905.md
@@ -7,7 +7,7 @@
 
 <div><img alt="【大选更新11·26】律师：感谢川普总统" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229786668-600x400.jpg"/>
 <div class="caption">
- 图为2020年11月25日，川普法律团队成员詹娜·埃利斯（Jenna Ellis，左二）律师和前纽约市长朱利安尼（Rudy Giuliani）在宾夕法尼亚州参议院多数政策委员会举行的公开听证会上；该听证会是为讨论2020年选举问题和违规行为，川普总统通过电话发表了讲话。（Samuel Corum / Getty Images）
+ 图为2020年11月25日，川普法律团队成员詹娜·埃利斯（Jenna Ellis，左二）律师和前纽约市长朱利安尼（Rudy Giuliani）在宾夕法尼亚州参议院多数政策委员会举行的公开听证会上；该听证会是为讨论2020年选举问题和违规行为，川普总统通过电话发表了讲话。(Samuel Corum / Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
