--- a/pages/nf4514/n12579275.md
+++ b/pages/nf4514/n12579275.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【大选更新11·27】川普：选举是骗局" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1287973460-600x400.jpg"/>
+<div><img alt="【大选更新11·27】川普：选举是巨大骗局" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1287973460-600x400.jpg"/>
 <div class="caption">
  2020年11月26日，川普总统在白宫接受记者提问时表示：“大规模的欺诈行为已经被发现”。(Erin Schaff - Pool/Getty Images)
 </div></div><hr/>
