--- a/pages/p3/953973.md
+++ b/pages/p3/953973.md
@@ -1,4 +1,4 @@
-### 华人爆料：回国登机仿如置身灾难片(图)
+### 加国发明新型口罩 据称5分钟杀死病毒(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,17 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <img alt="疫情 华人 回国" src="https://img3.secretchina.com/pic/2020/4-7/p2665521a1483091-ss.jpg" style="height:400px; width:600px"/>
+  <img alt="加拿大发明新型口罩 据称5分钟可杀死病毒" src="https://img3.secretchina.com/pic/2020/9-26/p2783541a850490462-ss.jpg" style="height:400px; width:600px"/>
   <br>
-   德国一名
-   <strong>
-    华人
-   </strong>
-   自曝，他“幸运”的抢到了最后一张机票，
-   <strong>
-    回国
-   </strong>
-   过程却犹如一场灾难片。（示意图/非本文图片/图片来源：Getty Images)
+   加拿大科学家发明一款新型口罩，据称5分钟可以杀死中共病毒。图为2020年9月24日，捷克布拉格一名戴着口罩男子走过病毒测试站。（图片来源：MICHAL CIZEK/AFP via Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,81 +21,59 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  内蒙局势升级 传大量装甲车现身街头](http://141.164.51.119:10000/videos/news/0903.html)
-
-#### [ 🔥  【陈光诚专访】 当年发生了什麽？为什麽要支持川普竞选总统？触目惊心的亲身经历告诉你背后的故事](http://141.164.51.119:10000/videos/news/cgc02.html)
-
-#### [ 🔥  《为你而来》（法轮功修炼者的故事）](http://141.164.51.119:10000/videos/news/ComingForYou.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月4日讯】
+  【看中国2020年11月27日讯】来自
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/疫情" target="_blank">
-    疫情
+   加拿大
+  </strong>
+  的科学家发明了一种
+  <strong>
+   新型口罩
+  </strong>
+  ，据称可以5分钟杀死
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/中共病毒" target="_blank">
+    中共病毒
    </span>
+   (又称新冠状病毒，COVID-19)
   </strong>
-  爆发后，其他国家政府纷纷派出包机，接回自己的侨民。而身在海外的中国人，就没有那么幸运了。除了机票被炒到上天，还一票难求外，中国政府、航空公司等还制定了诸多规定。德国一名
-  <strong>
-   华人
-  </strong>
-  自曝，他“幸运”的抢到了最后一张机票，
-  <strong>
-   回国
-  </strong>
-  过程却犹如一场灾难片。
+  。该研究成果来自阿尔伯塔大学（University of Alberta）一名刚刚毕业不久的女博士生鲁比诺（Ilaria Rubino），她5年前开始研究这项技术，本于11月24日荣获加拿大Mitacs创新奖。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  据海外中文媒体报道，德国40岁的
-  <span href="https://www.secretchina.com/news/gb/tag/华人" target="_blank">
-   华人
+  <strong>
+   实验室检测结果：病毒5分钟失去活性
+  </strong>
+ </p>
+ <p>
+  据
+  <span href="https://www.secretchina.com/news/gb/tag/加拿大" target="_blank">
+   加拿大
   </span>
-  男子王先生，在改签多次后，最终花高价买到了柏林经慕尼黑飞北京的机票。“这是最后一张机票，很幸运被我抢到了。”
+  媒体报道称，研究人员在该口罩表面上，加了氯化钠涂层，也就是我们熟知的盐，在与含病毒的颗粒接触时，盐能够吸收水分。而当水分蒸发时，盐就变成锯齿状的尖峰，刺穿病毒膜并迅速将其杀死。
  </p>
  <p>
-  然而，登机前还在为自己的幸运窃喜的王先生，登上飞机后，被眼前的景象吓呆了——第一班柏林飞慕尼黑的飞机，全机没有一个人戴口罩。
- </p>
- <p>
-  这是德国的国内航班，当时是3月中旬，德国人的防疫意识还基本为0，大家都是照常吃喝玩乐聚会，坐飞机自然也没有任何额外防护措施。
- </p>
- <p>
-  战战兢兢结束柏林到慕尼黑的旅程，王先生一下飞机就赶紧去办理下一趟慕尼黑飞北京的登机牌。
- </p>
- <p>
-  走到国航的登机口时，王先生发现，所有人都戴口罩和护目镜了，还有好几乘客甚至穿上了专业的防护服。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “这趟航班95%都是
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
+  在实验室对三种病毒的测试结果显示：“病毒在有涂层
+  <span href="https://www.secretchina.com/news/gb/tag/口罩" target="_blank">
+   口罩
   </span>
-  人，和刚才那架德国人坐的航班，景象大相径庭。”
+  表面5分钟内就失去活性，并在30分钟内完全被破坏。”
+ </p>
+ <p>
+  这款口罩采用和外科手术口罩一样的聚丙烯材料制成，可重复使用，无需清洗，多次安全佩戴和使用后也不会污染。这项技术也极有可能应用于N95，并取代一次性口罩。
+ </p>
+ <p>
+  该口罩在通过监管审批后，有望明年上市。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -118,7 +88,11 @@
   </div>
  </center>
  <p>
-  尽管大多数人把防护做到了极致，但一个没戴口罩，还不停咳嗽的男乘客，还是让很多中国乘客陷入惊恐当中。
+  报道还提醒大家，如今
+  <span href="https://zh.wikipedia.org/wiki/2019%E5%86%A0%E7%8A%B6%E7%97%85%E6%AF%92%E7%97%85%E5%8A%A0%E6%8B%BF%E5%A4%A7%E7%96%AB%E6%83%85" target="_blank">
+   加拿大疫情
+  </span>
+  反弹严重，在新口罩面世之前，该研究团队认为医用口罩仍然有用，希望大家在公共场合，能够积极佩戴医用口罩防疫。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -133,7 +107,9 @@
   </div>
  </center>
  <p>
-  王先生称，登机前，听到男子咳嗽，所有人都吓得后退老远。“他这种情况，我觉得感染的几率很大了。”
+  <strong>
+   如何正确使用和佩戴口罩？
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -148,7 +124,22 @@
   </div>
  </center>
  <p>
-  上飞机后，该名男子也依然一直在咳嗽，大家都很害怕，向空姐报告，空姐只说，那人有哮喘。
+  1、连续佩戴4小时更换，污染或潮湿后立即更换；
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  2、一定是医用口罩，不宜使用棉布、海绵口罩；
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -167,7 +158,7 @@
   </ins>
  </center>
  <p>
-  王先生称，这次疫情下登机和乘机的过程，让他联想到自己看过的很多灾难片，他表示，当时自己就有种仿如置身灾难片当中。
+  3、佩戴口罩前以及摘下口罩前后都应该洗手；
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -182,7 +173,7 @@
   </div>
  </center>
  <p>
-  经历12小时的煎熬，飞机终于落地首都机场。飞机上一个华人小男孩，在下飞机时，开始咳嗽发烧了。“像这对母子这样出现发烧、咳嗽症状的乘客同机还有，他们是第一批被点名下飞机的。”王先生说。
+  4、口罩应完全覆盖口鼻和下巴，把口罩上的金属片沿鼻梁两侧按紧，使口罩紧贴面部；
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -197,11 +188,7 @@
   </div>
  </center>
  <p>
-  在酒店隔离的日子也并不平静，王先生通过新闻，得知自己乘坐的那架航班上，查出有人确诊了。确诊者是一位46岁家住北京的女子，原本在英国给儿子陪读，疫情爆发后带儿子
-  <span href="https://www.secretchina.com/news/gb/tag/回国" target="_blank">
-   回国
-  </span>
-  ，下飞机当晚就发烧送医了。后来病情如何，就不得而知了。
+  5、每次佩戴口罩后，必须进行佩戴气密性检查（双手捂住口罩呼气，若感觉有气体从鼻夹处漏出，应重新调整鼻夹，若感觉气体从口罩两侧漏出，需要进一步调整头带、耳带位置）。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -233,7 +220,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -265,13 +252,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/945082.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/945082.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/945082.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/04/945082.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/953973.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/953973.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/953973.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/28/953973.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p3/945082.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p3/953973.md' width='0px' height='0px'/>
