--- a/pages/soh6/447541.md
+++ b/pages/soh6/447541.md
@@ -1,4 +1,4 @@
-### 【选情更新11/27】宾州诉讼已步入高院上诉流程 川普：本次大选是巨大骗局
+### 【选情更新11/27】宾州诉讼将步入高院上诉流程 川普：本次大选是巨大骗局
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
