--- a/pages/p7/953849.md
+++ b/pages/p7/953849.md
@@ -1,4 +1,4 @@
-### 见证中共邪恶政权各种谎言 宋庆龄悔不当初(图)
+### 鬼谷子最经典的五句话是什么？(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="宋庆龄与毛泽东和邓小平在苏联莫斯科。" src="https://img3.secretchina.com/pic/2020/11-18/p2820632a427062478-ss.jpg"/>
+  <img alt="中国古代思想家鬼谷子。" src="https://img2.secretchina.com/pic/2019/6-20/p2450941a205789136-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   见证中共独裁政权各种谎言，宋庆龄悔不当初。图为宋庆龄与毛泽东和邓小平在苏联莫斯科。（图片来源：公有领域）
+   中国古代思想家鬼谷子。（网络截图）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,61 +29,38 @@
   </div>
  </div>
  <p>
-  1949年，
-  <span href="https://www.secretchina.com/news/gb/tag/蒋介石" target="_blank">
-   蒋介石
+  我们在上学的时候都知道有一句话是“学好数理化，走遍天下都不怕”数理化只是教会你的知识，但是并不能教会你为人处世。在中国历史上有一位传奇人物，精通于心理揣摩，通晓纵横捭合之术，独具通天之智。他还是著名的道家、
+  <span href="https://www.secretchina.com/news/gb/tag/思想家" target="_blank">
+   思想家
   </span>
-  和宋家姐妹轮番劝
-  <strong>
-   宋庆龄
-  </strong>
-  离开大陆，宋拒绝了，留下了与推翻丈夫政权的人合作，匪夷所思，除了开始那几年的尊重，宋更多的是被冷落，被当做政治花瓶点缀，宋见证了这个独裁政权的各种谎言与荒诞，心中的苦闷是不能言说的。1994年11月，
-  <strong>
-   中共
-  </strong>
-  书记处审查通过了党史编委会整理的关于宋庆龄1949年后32年经历的材料。
+  、谋略家、兵家、阴阳家、外交家、法家、名家、发明家、医学家，更是伟大的教育家，这样的称号在所有的历史人物中是很难找到第二个人。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  这份材料的内容提要如下：
- </p>
- <p>
-  1955年11月，宋给毛写信：“我很不理解提出对工商业的改造，
-  <span href="https://www.secretchina.com/news/gb/tag/共产党" target="_blank">
-   共产党
+  虽然后人都说孔子有三千弟子七十二贤人，而
+  <span href="https://www.secretchina.com/news/gb/tag/鬼谷子" target="_blank">
+   鬼谷子
   </span>
-  曾向工商界许下长期共存、保护工商业者利益的诺言。这样一来，不是变成自食其言了吗？资本家已经对共产党的政策产生了怀疑和恐惧，不少人后悔和抱怨。”毛批示：“宋副委员长有意见，要代表资本家讲话。”
+  有苏秦、张仪、孙膑、庞涓、商鞅、吕不韦、白起、李牧、王翦、甘茂、乐毅、毛遂等弟子，这些人物在当年都是叱咤风云的人物。那么鬼谷子是有怎么样的智慧才能培育这么多优秀的人才？
  </p>
  <p>
-  1957年宋又
-  <span href="https://www.secretchina.com/news/gb/tag/写信" target="_blank">
-   写信
-  </span>
-  给党中央：“党中央号召大鸣大放，怎么又收了？共产党不怕国民党八百万大军，不怕美帝国主义，怎么会担心人民推翻党的领导和人民政府？共产党要敢于接受各界人士的批评，批评人士大多是爱国、爱党的，一些民主党派人士为新中国的解放，作出了家庭、个人名利的牺牲，一些二、三十岁的青年知识分 子怎么可能一天就变成反党反社会主义分子？我很不理解这个运动，我想了两个多月，还是想不通，有这么多党内党外纯粹的人会站在共产党和人民政府的对立面？要推翻共产党？”
+  今天就来说说鬼谷子的五句话，学会这五句话，教会你识遍天下人。
  </p>
  <p>
-  从1958年起，宋曾推病拒绝参加人大常委会。党中央委派刘少奇、周恩来、董必武去做工作，宋只得继续参加。1959年4月，宋在人大被推举为国家副主席。宋先后两次推辞：“我是落伍了，思想跟不上，才挂个名，作个样子，对国家不利。”提议由李富春或乌兰夫担任。
+  <strong>
+   第一句：富看其所为
+  </strong>
  </p>
  <p>
-  宋任国家副主席，是刘少奇、董必武、林伯渠、李富春提议的，政治局讨论时，21人中18人赞成，3人反对，反对者是：毛、林彪、康生。当时毛发言：“宋是我们民主革命时期的同路人，在社会主义革命时期，她和我们就走不到一起了。从不赞成我们的方针路线到反对我们的方针路线。我们同她是不同的阶级。”
+  天下有钱的人很多，但是善于用钱的人却很少，一个人有钱的时候就要看看他的行为，对财富的处理可以看出他的价值观，总得来说就是“君子仗义疏财，小人视财如命”。毕竟钱财乃身外之物，生不带来死不带去，对待钱财要有正确的价值观。人一生不能没有钱，但是却不能仅仅为了钱。
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  文革期间，宋先后给毛和党中央写了七封信，表达了她对“文革”的不理解、反感，并对共产党极度失望。1967年8月、1969年11月、1976年6月，宋曾三次产生厌世思想，在信中以及对来探望她的领导人的谈话中流露出对自己所选择的道路感到怅惘和说不出的苦闷。
+  <strong>
+   第二句：窘看其所不为
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -98,7 +75,7 @@
   </div>
  </center>
  <p>
-  七封信中说：“我不懂文化，说小说都是政治，而且都是毒草，我糊涂了，一夜天下来，一些和我一起工作的同事都变成了走资派、反党集团、野心家、牛鬼蛇神。中央要我学习批判揭发刘少奇，我不会作的，刘少奇主席在党中央工作了三、四十年，今天会是叛徒、内奸！我不相信，一个叛徒内奸当了七年的国家主席，现在宪法还有效吗？怎么可以乱抓人、乱斗人、逼死人？党中央要出来讲话。这种无法无天的情况，自己伤害自己的同志、人民，是罪行。我们的优秀干部从与国民党的战斗中走过来，却死在自己的队伍中，这是什么原因？”
+  有很多人在窘迫的时候都会忘记自己的原则，如果这些人能够坚守自己的原则，那么也不会有这么多贪官，会有这么多偷盗抢劫。另外，如果身边的一些朋友去做违法犯罪的事情，经常忘记自己的原则，就要减少交往。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -113,7 +90,9 @@
   </div>
  </center>
  <p>
-  1970年3月，毛对周恩来说：“她不愿意看到今天的变化，可以到海峡对岸，可以去香港、去外国，我不挽留。”并指示周恩来、李先念把他的话传达给宋。传达时他们说：“主席很关心你，知道你的心情不怎么好，建议你到外面散散心，休息休息。”宋说：“是否嫌我还在？我的一生还是要在这块土地上，走完最后几步。”于是宋推病拒绝出席一些节日活动和招待会，说：“我参加会伤感，还是不参加，参加一次，回来就要进医院。另外，我也不想做政治上的点缀。”
+  <strong>
+   第三句：居看其所亲
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -128,7 +107,75 @@
   </div>
  </center>
  <p>
-  1980年11月，宋给党中央写了她一生中最后的一封信：“一、国家要振兴，恢复元气，这是一次大好时机。二、要总结建国以来政治运动对国家对人民造成的创伤。三、请不要把我和国父放在一起，我不够格的。”
+  环境对一个人的影响非常大，俗话说得好“近朱者赤，近墨者黑”。好的环境会让人向好的一方面发展，而不好的环境会让人一步步堕落下去，在我国古代最有名的环境影响人的事情就是“孟母三迁”。孟母在当时多看重环境对一个人的影响。所以看到一个人的时候就要看看他和什么人住在一起，和什么样的人经常来往。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   第四句：贵看其所举
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <center>
+  <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="fluid" data-ad-layout="in-article" data-ad-slot="3646767294" style="display:block; text-align:center;">
+  </ins>
+ </center>
+ <p>
+  当一个人当了大官，有了权力的时候，就要看他推举的是什么人，如果他推举的都是非常有才能的，那么这个人就是公平公正的，如果一个人推举的人都是不务正业游手好闲的，说明这个人不行，在我国古代最有名的人就是狄仁杰了，内举不避亲，外举不避仇。这样的人让人敬佩。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   第五句：富看其所孝
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  在我国古代非常看重孝，古有董永卖身葬父，子路百里负米，黄香扇枕温衾，一个人在富有的时候看看他孝顺不孝顺，如果一个人在非常富有的时候不孝顺，那么这样的人不能深交。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -192,13 +239,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/904686.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/904686.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/904686.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/26/904686.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/953849.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/953849.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/953849.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/28/953849.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p6/904686.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p7/953849.md' width='0px' height='0px'/>
