--- a/pages/nf4514/n12581514.md
+++ b/pages/nf4514/n12581514.md
@@ -15,7 +15,7 @@
 #### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 <div><p>
- 【大纪元2020年11月28日讯】（大纪元记者陈霆综合报导）在本届美国
+ 【大纪元2020年11月28日讯】（大纪元记者陈霆、李言综合报导）在本届美国
  <ok href="https://www.epochtimes.com/gb/tag/%E6%80%BB%E7%BB%9F%E5%A4%A7%E9%80%89.html">
   总统大选
  </ok>
@@ -48,6 +48,44 @@
 <h4>
  以下是美国大选情况的实时更新：
 </h4>
+<h3>
+ 朱利安尼：大量选民欺诈证据供最高法院考虑
+</h3>
+<p>
+ 川普（特朗普）的律师鲁迪·朱利安尼（Rudy Giuliani）周五（11月27日）说，唐纳德·川普总统的竞选团队正在忙于将与选举有关的案件提交最高法院。
+</p>
+<p>
+ 朱利安尼在线于《美国新闻》上露面时说：“我们有四五百份宣誓证词，这些人具体‘见证了在五六个不同的州犯下的罪行，这是该国历史上最大的
+ <ok href="https://www.epochtimes.com/gb/tag/%E9%80%89%E4%B8%BE%E8%88%9E%E5%BC%8A.html">
+  选举舞弊
+ </ok>
+ 计划’。”
+</p>
+<p>
+ “民主党人在每个这些州都采用了相同的作弊方法，那就是将邮寄选票填塞到投票箱，然后将共和党监督员排除在外，这样他们就看不到发生了什么。这在宾夕法尼亚州发生了；在密歇根州发生了；在威斯康星州发生了；在内华达州发生了；在亚利桑那州发生了；在乔治亚州发生了。至少发生在这六个州。”他补充说。
+</p>
+<p>
+ 周五，宾夕法尼亚州一家法院驳回川普竞选团队的上诉，后者挑战该州选举结果。美国第三巡回上诉法院裁定，这项挑战没有根据，竞选团队律师未提供选举舞弊的证据。
+</p>
+<p>
+ 朱利安尼说：“我不懂这些法官，为什么他们回避事实——这些指控非常具体。”
+</p>
+<p>
+ “诉状长达30页，请您看看。它提出了指控人的名字，告诉您他们所看到的，告诉您他们看到伪造选票。他们看到选票在事发当晚被计入四五次。这些都是再具体不过的指控了。所以我不知道这是回避棘手案件的借口还是谁知道，现实是他们回避不了的，因为如果在法庭上做不了，那我们将在州立法机关做。”
+</p>
+<p>
+ 一名宾夕法尼亚州法官在周五的另一场法律诉讼中则表示，起诉宾州的共和党人可能获胜。
+</p>
+<p>
+ 联邦法官帕特里夏·麦卡洛（Patricia McCullough）表示，宾州官员在没有修宪的情况下扩大邮寄选票，似乎违宪。
+</p>
+<p>
+ 川普竞选团队和共和党人在宾夕法尼亚州和密歇根州等战场州提起一系列诉讼。同时，竞选团队要求州议员通过向华盛顿派遣支持川普的选举人进行干预，虽然结果看上去是民主党总统候选人乔·
+ <ok href="https://www.epochtimes.com/gb/tag/%E6%8B%9C%E7%99%BB.html">
+  拜登
+ </ok>
+ （Joe Biden）赢得该州。
+</p>
 <h3>
  宾州议会要求州长撤销选举认证
 </h3>
@@ -191,11 +229,7 @@
  。
 </p>
 <h3>
- 众院少数党党鞭：
- <ok href="https://www.epochtimes.com/gb/tag/%E6%8B%9C%E7%99%BB.html">
-  拜登
- </ok>
- 能源计划威胁美制造业
+ 众院少数党党鞭：拜登能源计划威胁美制造业
 </h3>
 <p>
  美国联邦众议院少数党（共和党）党鞭史蒂夫‧斯卡利斯（Steve Scalise）批评总统候选人拜登的能源计划，称这些计划将影响“辛勤工作的家庭”，并使川普（特朗普）政府在中产阶级经济复苏方面取得的进展付诸东流。
@@ -271,6 +305,10 @@
 <p>
  责任编辑：叶紫微
 </p>
+<div id="gtx-anchor" style="position: absolute; visibility: hidden; left: 10px; top: 862.531px; width: 65px; height: 19px;">
+</div>
+<div class="jfk-bubble gtx-bubble" style="visibility: visible; left: 28px; top: 892px; opacity: 1;">
+</div>
 </div>
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
