同步于: 11月29日0时3分

--- a/pages/p5/954076.md
+++ b/pages/p5/954076.md
@@ -1,4 +1,4 @@
-### 见证中共邪恶政权各种谎言 宋庆龄悔不当初(图)
+### 贸易战重启？美首次因人民币汇率动用关税(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="宋庆龄与毛泽东和邓小平在苏联莫斯科。" src="https://img3.secretchina.com/pic/2020/11-18/p2820632a427062478-ss.jpg"/>
+ <p style="text-align: center;">
+  <img alt="贸易 人民币 汇率 关税" src="https://img3.secretchina.com/pic/2019/12-21/p2586941a771512960-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   见证中共独裁政权各种谎言，宋庆龄悔不当初。图为宋庆龄与毛泽东和邓小平在苏联莫斯科。（图片来源：公有领域）
+   美国首次因人民币汇率问题动用关税措施。（图片来源：Adobe stock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,61 +29,56 @@
   </div>
  </div>
  <p>
-  1949年，
-  <span href="https://www.secretchina.com/news/gb/tag/蒋介石" target="_blank">
-   蒋介石
-  </span>
-  和宋家姐妹轮番劝
+  【看中国2020年11月28日讯】（看中国记者李正鑫综合报导）11月28日，中国商务部发布就美国对华封口扎带反补贴案中“
   <strong>
-   宋庆龄
+   人民币汇率
   </strong>
-  离开大陆，宋拒绝了，留下了与推翻丈夫政权的人合作，匪夷所思，除了开始那几年的尊重，宋更多的是被冷落，被当做政治花瓶点缀，宋见证了这个独裁政权的各种谎言与荒诞，心中的苦闷是不能言说的。1994年11月，
+  低估”做出初步裁定发表谈话，表示抗议。这是美国商务部首次在中美
   <strong>
-   中共
+   <span href="https://www.secretchina.com/news/gb/tag/贸易" target="_blank">
+    贸易
+   </span>
   </strong>
-  书记处审查通过了党史编委会整理的关于宋庆龄1949年后32年经历的材料。
+  中，因人民币汇率问题采取
+  <strong>
+   关税
+  </strong>
+  行动。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  这份材料的内容提要如下：
- </p>
- <p>
-  1955年11月，宋给毛写信：“我很不理解提出对工商业的改造，
-  <span href="https://www.secretchina.com/news/gb/tag/共产党" target="_blank">
-   共产党
+  中国商务部网站11月28日发布文章，
+  <span href="https://zh.wikipedia.org/zh-cn/%E8%B4%B8%E6%98%93" target="_blank">
+   贸易
   </span>
-  曾向工商界许下长期共存、保护工商业者利益的诺言。这样一来，不是变成自食其言了吗？资本家已经对共产党的政策产生了怀疑和恐惧，不少人后悔和抱怨。”毛批示：“宋副委员长有意见，要代表资本家讲话。”
+  救济调查局负责人称，美国商务部的做法严重违反有关国际规则，希望美商务部充分考虑中方提交的证据和抗辩意见，纠正有关错误做法和结论。
  </p>
  <p>
-  1957年宋又
-  <span href="https://www.secretchina.com/news/gb/tag/写信" target="_blank">
-   写信
+  美国商务部11月24日公布对华封口扎带反补贴案初裁结果，裁定中国涉案企业的补贴幅度为122.5%。其中，以美国财政部报告为基础，认定“
+  <span href="https://zh.wikipedia.org/zh-cn/%E4%BA%BA%E6%B0%91%E5%B8%81" target="_blank">
+   人民币
   </span>
-  给党中央：“党中央号召大鸣大放，怎么又收了？共产党不怕国民党八百万大军，不怕美帝国主义，怎么会担心人民推翻党的领导和人民政府？共产党要敢于接受各界人士的批评，批评人士大多是爱国、爱党的，一些民主党派人士为新中国的解放，作出了家庭、个人名利的牺牲，一些二、三十岁的青年知识分 子怎么可能一天就变成反党反社会主义分子？我很不理解这个运动，我想了两个多月，还是想不通，有这么多党内党外纯粹的人会站在共产党和人民政府的对立面？要推翻共产党？”
+  汇率低估”。
  </p>
  <p>
-  从1958年起，宋曾推病拒绝参加人大常委会。党中央委派刘少奇、周恩来、董必武去做工作，宋只得继续参加。1959年4月，宋在人大被推举为国家副主席。宋先后两次推辞：“我是落伍了，思想跟不上，才挂个名，作个样子，对国家不利。”提议由李富春或乌兰夫担任。
+  美国商务部长罗斯（Wilbur Ross）在声明中说，“商务部会持续以法律工具，以积极对付他国过度贬低
+  <span href="https://zh.wikipedia.org/zh-cn/%E6%B1%87%E7%8E%87" target="_blank">
+   汇率
+  </span>
+  及其他不公补贴，进一步确保美国企业与劳工能有公平竞争环境。”
  </p>
  <p>
-  宋任国家副主席，是刘少奇、董必武、林伯渠、李富春提议的，政治局讨论时，21人中18人赞成，3人反对，反对者是：毛、林彪、康生。当时毛发言：“宋是我们民主革命时期的同路人，在社会主义革命时期，她和我们就走不到一起了。从不赞成我们的方针路线到反对我们的方针路线。我们同她是不同的阶级。”
+  向美国商务部提出诉愿的是一家生产封口扎带的美国公司贝德福（Bedford），全美各超市都普遍使用贝德福的封口扎带，但贝德福今年初称，
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  公司生产的封口扎带在市场上越来越多，“若非不公平竞争，断无可能”。
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  文革期间，宋先后给毛和党中央写了七封信，表达了她对“文革”的不理解、反感，并对共产党极度失望。1967年8月、1969年11月、1976年6月，宋曾三次产生厌世思想，在信中以及对来探望她的领导人的谈话中流露出对自己所选择的道路感到怅惘和说不出的苦闷。
+  相关中国公司未应诉。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -98,7 +93,11 @@
   </div>
  </center>
  <p>
-  七封信中说：“我不懂文化，说小说都是政治，而且都是毒草，我糊涂了，一夜天下来，一些和我一起工作的同事都变成了走资派、反党集团、野心家、牛鬼蛇神。中央要我学习批判揭发刘少奇，我不会作的，刘少奇主席在党中央工作了三、四十年，今天会是叛徒、内奸！我不相信，一个叛徒内奸当了七年的国家主席，现在宪法还有效吗？怎么可以乱抓人、乱斗人、逼死人？党中央要出来讲话。这种无法无天的情况，自己伤害自己的同志、人民，是罪行。我们的优秀干部从与国民党的战斗中走过来，却死在自己的队伍中，这是什么原因？”
+  英国广播公司（BBC）评论认为，这是美国商务部首次动用
+  <span href="https://zh.wikipedia.org/zh-cn/%E5%85%B3%E7%A8%8E" target="_blank">
+   关税
+  </span>
+  来降低人民币汇率冲击，本案开了拿关税来平衡汇率的罕见先例。美国今年初制订新规，一旦美方认定贸易伙伴国刻意贬低本国货币，可据此向对方出口商品加征关税。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -113,7 +112,11 @@
   </div>
  </center>
  <p>
-  1970年3月，毛对周恩来说：“她不愿意看到今天的变化，可以到海峡对岸，可以去香港、去外国，我不挽留。”并指示周恩来、李先念把他的话传达给宋。传达时他们说：“主席很关心你，知道你的心情不怎么好，建议你到外面散散心，休息休息。”宋说：“是否嫌我还在？我的一生还是要在这块土地上，走完最后几步。”于是宋推病拒绝出席一些节日活动和招待会，说：“我参加会伤感，还是不参加，参加一次，回来就要进医院。另外，我也不想做政治上的点缀。”
+  依据美国财政部的《美国主要贸易伙伴的经济和
+  <span href="https://www.secretchina.com/news/gb/tag/汇率" target="_blank">
+   汇率
+  </span>
+  政策》，美国对于“汇率操纵国”的认定标准为：一是某个国家对美贸易盈余超过200亿美元；二是该国经常性项目盈余占GDP的比例超过2%；三是在外汇市场上进行持续的单边干预，近12个月中有6个月以上进行了持续购汇，金额超过GDP的2%。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -128,7 +131,52 @@
   </div>
  </center>
  <p>
-  1980年11月，宋给党中央写了她一生中最后的一封信：“一、国家要振兴，恢复元气，这是一次大好时机。二、要总结建国以来政治运动对国家对人民造成的创伤。三、请不要把我和国父放在一起，我不够格的。”
+  如果一个经济体满足上述标准中的两条，该经济体将会被纳入汇率政策监测名单进行密切观察。但如果美国与一个经济体的贸易逆差占美国总体贸易逆差的比例较大，即便该经济体并未满足上述标准中的两条也会被纳入监测名单。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  被列为“汇率操纵国”将会出现什么后果？
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  历史上美国对被列入“汇率操纵国”的国家，在法案规定的框架之内与相关国家进行协商、推动其汇率升值或汇率改革。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  例如，韩国在被列入“汇率操纵国”之后，韩元对美元逐渐升值，1988年11月至1989年4月底，韩元累计升值5%以上；韩国总出口、尤其是对美国的出口增速大幅下滑。与此同时，1989年，韩国经常项目顺差同比萎缩68%，并在1990年转为逆差。1990年，美国将其移出“汇率操纵国”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -192,13 +240,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/904686.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/904686.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/904686.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/26/904686.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/954076.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/954076.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/954076.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/28/954076.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p6/904686.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/954076.md' width='0px' height='0px'/>
